--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 .about .flex-container {
   flex-direction: column;
   padding: 5rem;
-  background: linear-gradient(111.95deg, #4e9f3d 0.36%, #f4a442 91.13%);
+  background: linear-gradient(111.95deg, #4e9f3d 0.36%, #f45a42 91.13%);
   background-repeat: no-repeat;
   background-size: auto 900px;
   border-radius: 30px;
@@ -136,9 +136,9 @@ h1 {
 }
 
 .navbar .tombol {
-  background: #f4a442;
+  background: #f45a42;
   padding: 8px 34px 8px 35px;
-  box-shadow: 0px 4px 20px #f4a442;
+  box-shadow: 0px 4px 20px #f45a42;
   border-radius: 30px;
   color: #ffffff;
 }
@@ -171,10 +171,10 @@ h1 {
 }
 
 .tombol {
-  background: #f4a442;
+  background: #f45a42;
   padding: 17px 45px 17px 45px;
   border-radius: 30px;
-  box-shadow: 0px 4px 20px #f4a442;
+  box-shadow: 0px 4px 20px #f45a42;
 }
 
 .jumbotron .tombol:hover {
@@ -196,10 +196,10 @@ h1 {
 
 .tombol-transparan {
   background: transparent;
-  border: solid 2px #f4a442;
+  border: solid 2px #f45a42;
   padding: 17px 45px 17px 45px;
   border-radius: 30px;
-  box-shadow: 0px 4px 20px #f4a442;
+  box-shadow: 0px 4px 20px #f45a42;
 }
 
 .jumbotron img {
@@ -317,7 +317,7 @@ h1 {
   box-shadow: none;
   padding-left: 85px;
   padding-right: 85px;
-  filter: drop-shadow(0px 4px 20px #f4a442);
+  filter: drop-shadow(0px 4px 20px #f45a42);
 }
 
 .content.out .tombol-transparan {
@@ -326,7 +326,7 @@ h1 {
 }
 
 .content .tombol-transparan:hover{
-  background-color: #F4A442;
+  background-color: #f45a42;
   color: #ffffff;
   
 }
@@ -545,7 +545,7 @@ footer .row.icon-awesome i {
   }
 
   .jumbotron {
-    background: linear-gradient(111.95deg, #4e9f3d 0.36%, #f4a442 91.13%);
+    background: linear-gradient(111.95deg, #4e9f3d 0.36%, #f45a42 91.13%);
     height: 1200px;
   }
 
@@ -661,5 +661,11 @@ footer .row.icon-awesome i {
 
   .card-about{
     transform: scale(0.8);
+  }
+  .card-about .card-featured {
+    transform: scale(0.85);
+  }
+  .card-about .card-featured:hover {
+    transform: scale(0.9);
   }
 }
